dist/LineScript-win64-20260616/tests/cases/compile_fail/owned_return.lsc
factory() -> i64 do
  declare owned arr = array_new()
  return arr
end

main() -> i64 do
  return factory()
end
